--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "read-excel-file": "^5.6.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.29.0",
